--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <div id="main">
+      <div id="phone-island">
+        <img src="status bar - black.png" alt="phone-island" />
+      </div>
       <div id="group9">
         <img src="Logo (1).png" alt="the-logo" id="logo" />
         <p
@@ -26,14 +29,14 @@
             letter-spacing: -0.8px;
           "
         >
-          For Individuals
+        For Individuals
         </p>
         <span
-          id="content"
+          id="content1"
           style="
             font-family: 'Unbounded', sans-serif;
             font-size: 14px;
-            font-weight: 400;
+            font-weight: lighter;
             line-height: 25px;
             letter-spacing: 0px;
             text-align: left;
@@ -41,6 +44,19 @@
         >
           Start benefiting from the wellness experience. For companies looking
           on increasing productivity, and improving organization wellness.
+        </span>
+        <span
+          id="content2"
+          style="
+            font-family: 'Unbounded light', sans-serif;
+            font-size: 14px;
+            font-weight: lighter;
+            line-height: 25px;
+            text-align: left;
+          "
+        >
+          Inspiring wholesome harmony for the mind, body and spirit, for
+          everyone, everywhere.
         </span>
       </div>
       <div id="registeration-box">
@@ -73,28 +89,46 @@
                 name="gender"
                 style="width: 100%; height: 48px; margin-top: 8px"
               >
-              <option value="" style="font-weight: 300;font-size: 14px;">Select here</option>
+                <option value="" style="font-weight: 300; font-size: 14px">
+                  Select here
+                </option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
               </select>
             </div>
             <div class="form1">
               <label for="dob" style="width: 100%">Date of Birth</label><br />
-              <input type="date" name="dob" style="width: 100%" placeholder="Select here"/>
+              <input
+                type="date"
+                name="dob"
+                style="width: 100%"
+                placeholder="Select here"
+              />
             </div>
             <div class="form1">
               <label for="weight" style="width: 100%">Weight (KG)</label><br />
-              <input type="text" name="weight" style="width: 100%" placeholder="Enter Weight"/>
+              <input
+                type="text"
+                name="weight"
+                style="width: 100%"
+                placeholder="Enter Weight"
+              />
             </div>
             <div class="form1">
               <label for="height" style="width: 100%">Height (CM)</label><br />
-              <input type="text" name="height" style="width: 100%" placeholder="Enter Height here"/>
+              <input
+                type="text"
+                name="height"
+                style="width: 100%"
+                placeholder="Enter Height here"
+              />
             </div>
           </div>
           <div id="form2-container">
             <div class="form2">
               <label for="actlevel">Activity Level</label><br />
-              <select name="actlevel" id="acti"></select> <!-- wasnt sure what to put here, so left it empty -->
+              <select name="actlevel" id="acti"></select>
+              <!-- wasnt sure what to put here, so left it empty -->
             </div>
             <div class="form2">
               <label for="password">Password</label><br />
@@ -102,12 +136,17 @@
             </div>
             <button>Register</button>
           </div>
-          <p id="lisence-agreement">
+          <p id="license-agreement1">
             By clicking Register, you agree to our
             <a href="terms-of-use">Terms of Use</a> and our
             <a href="privacy-policy">Privacy Policy</a>
           </p>
         </form>
+        <p id="license-agreement2">
+          By clicking Register, you agree to our
+          <a href="terms-of-use">Terms of Use</a> and our
+          <a href="privacy-policy">Privacy Policy</a>
+        </p>
       </div>
     </div>
   </body>
